--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 @layer base {
   :root {
-    @apply bg-gray-950 text-white font-sans;
+    @apply bg-gray-50 dark:bg-gray-950 text-black dark:text-white font-sans;
   }
 
   body {
